include/openswmm/engine/openswmm_infrastructure.h


SWMM_ENGINE_API int swmm_transect_add(SWMM_Engine engine, const char* id);
SWMM_ENGINE_API int swmm_transect_set_roughness(SWMM_Engine engine, int idx, double n_left, double n_right, double n_channel);
SWMM_ENGINE_API int swmm_transect_add_station(SWMM_Engine engine, int idx, double station, double elevation);
SWMM_ENGINE_API int swmm_transect_count(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_transect_index(SWMM_Engine engine, const char* id);
SWMM_ENGINE_API const char* swmm_transect_id(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_transect_get_roughness(SWMM_Engine engine, int idx,
                                                 double* n_left, double* n_right, double* n_channel);
SWMM_ENGINE_API int swmm_transect_set_bank_stations(SWMM_Engine engine, int idx,
                                                     double x_left, double x_right);
SWMM_ENGINE_API int swmm_transect_get_bank_stations(SWMM_Engine engine, int idx,
                                                     double* x_left, double* x_right);
SWMM_ENGINE_API int swmm_transect_set_encroachment_stations(SWMM_Engine engine, int idx,
                                                             double x_left, double x_right);
SWMM_ENGINE_API int swmm_transect_get_encroachment_stations(SWMM_Engine engine, int idx,
                                                             double* x_left, double* x_right);
SWMM_ENGINE_API int swmm_transect_set_modifiers(SWMM_Engine engine, int idx,
                                                 double x_factor, double y_factor, double length_factor);
SWMM_ENGINE_API int swmm_transect_get_modifiers(SWMM_Engine engine, int idx,
                                                 double* x_factor, double* y_factor, double* length_factor);
SWMM_ENGINE_API int swmm_transect_set_comments(SWMM_Engine engine, int idx, const char* text);
SWMM_ENGINE_API int swmm_transect_get_comments(SWMM_Engine engine, int idx, char* buf, int buflen);
SWMM_ENGINE_API int swmm_transect_get_station_count(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_transect_get_station(SWMM_Engine engine, int idx, int station_idx,
                                               double* station, double* elevation);
SWMM_ENGINE_API int swmm_transect_clear_stations(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_transect_rename(SWMM_Engine engine, int idx, const char* new_id);
SWMM_ENGINE_API int swmm_transect_remove(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_street_add(SWMM_Engine engine, const char* id);
SWMM_ENGINE_API int swmm_street_set_params(SWMM_Engine engine, int idx,
                                             double t_crown, double h_curb, double sx, double n_road,
                                             double gutter_depres, double gutter_width, int sides,
                                             double back_width, double back_slope, double back_n);
SWMM_ENGINE_API int swmm_street_count(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_street_index(SWMM_Engine engine, const char* id);
SWMM_ENGINE_API const char* swmm_street_id(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_street_get_params(SWMM_Engine engine, int idx,
                                             double* t_crown, double* h_curb, double* sx, double* n_road,
                                             double* gutter_depres, double* gutter_width, int* sides,
                                             double* back_width, double* back_slope, double* back_n);
SWMM_ENGINE_API int swmm_inlet_add(SWMM_Engine engine, const char* id, const char* type);
SWMM_ENGINE_API int swmm_inlet_set_params(SWMM_Engine engine, int idx, double length, double width,
                                            const char* grate_type, double open_area, double splash_veloc);
SWMM_ENGINE_API int swmm_inlet_count(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_inlet_index(SWMM_Engine engine, const char* id);
SWMM_ENGINE_API const char* swmm_inlet_id(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_inlet_get_params(SWMM_Engine engine, int idx,
                                            double* length, double* width,
                                            char* grate_type, int grate_buflen,
                                            double* open_area, double* splash_veloc);
SWMM_ENGINE_API int swmm_inlet_get_type(SWMM_Engine engine, int idx, char* buf, int buflen);
SWMM_ENGINE_API int swmm_lid_add(SWMM_Engine engine, const char* id, int type);
SWMM_ENGINE_API int swmm_lid_set_surface(SWMM_Engine engine, int idx, double storage, double roughness, double slope);
SWMM_ENGINE_API int swmm_lid_set_soil(SWMM_Engine engine, int idx, double thick, double porosity, double fc, double wp, double ksat, double kslope);
SWMM_ENGINE_API int swmm_lid_set_storage(SWMM_Engine engine, int idx, double thick, double void_frac, double ksat);
SWMM_ENGINE_API int swmm_lid_set_drain(SWMM_Engine engine, int idx, double coeff, double expon, double offset);
SWMM_ENGINE_API int swmm_lid_set_pavement(SWMM_Engine engine, int idx, double thick, double void_ratio,
                                          double frac_imperv, double ksat, double clog_factor, double regen_days);
SWMM_ENGINE_API int swmm_lid_set_drainmat(SWMM_Engine engine, int idx, double thick, double void_frac, double roughness);
SWMM_ENGINE_API int swmm_lid_count(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_lid_index(SWMM_Engine engine, const char* id);
SWMM_ENGINE_API const char* swmm_lid_id(SWMM_Engine engine, int idx);
SWMM_ENGINE_API int swmm_lid_get_type(SWMM_Engine engine, int idx, int* type);
SWMM_ENGINE_API int swmm_lid_get_surface(SWMM_Engine engine, int idx, double* storage, double* roughness, double* slope);
SWMM_ENGINE_API int swmm_lid_get_soil(SWMM_Engine engine, int idx, double* thick, double* porosity, double* fc, double* wp, double* ksat, double* kslope);
SWMM_ENGINE_API int swmm_lid_get_storage(SWMM_Engine engine, int idx, double* thick, double* void_frac, double* ksat);
SWMM_ENGINE_API int swmm_lid_get_drain(SWMM_Engine engine, int idx, double* coeff, double* expon, double* offset);
SWMM_ENGINE_API int swmm_lid_get_pavement(SWMM_Engine engine, int idx, double* thick, double* void_ratio,
                                          double* frac_imperv, double* ksat, double* clog_factor, double* regen_days);
SWMM_ENGINE_API int swmm_lid_get_drainmat(SWMM_Engine engine, int idx, double* thick, double* void_frac, double* roughness);
SWMM_ENGINE_API int swmm_lid_usage_add(SWMM_Engine engine, int subcatch_idx, int lid_idx, int number, double area, double width, double init_sat, double from_imperv);
SWMM_ENGINE_API int swmm_lid_usage_count(SWMM_Engine engine);
SWMM_ENGINE_API int swmm_lid_usage_get(SWMM_Engine engine, int usage_idx,
                                       int* subcatch_idx, int* lid_idx, int* number,
                                       double* area, double* width, double* init_sat,
                                       double* from_imperv, int* to_perv, double* from_perv);
SWMM_ENGINE_API int swmm_lid_usage_remove(SWMM_Engine engine, int usage_idx);