python/openswmm/engine/_common.pxd


cdef extern from "openswmm_controls.h":
    cdef int swmm_control_add_rule(SWMM_Engine e, const char* rule_text)
    cdef int swmm_control_validate_rule(SWMM_Engine e, const char* rule_text, char* err_buf, int err_buf_len, int* line_out)
    cdef int swmm_control_count(SWMM_Engine e)
    cdef int swmm_control_get_rule(SWMM_Engine e, int idx, char* buf, int buflen)
    cdef int swmm_control_get_id(SWMM_Engine e, int idx, char* buf, int buflen)
    cdef int swmm_control_clear_rules(SWMM_Engine e)
    cdef int swmm_control_set_link_setting(SWMM_Engine e, int link_idx, double setting)
    cdef int swmm_control_set_link_status(SWMM_Engine e, int link_idx, int status)

cdef extern from "openswmm_infrastructure.h":
    # Transects
    cdef int swmm_transect_add(SWMM_Engine e, const char* id)
    cdef int swmm_transect_set_roughness(SWMM_Engine e, int idx, double n_left, double n_right, double n_channel)
    cdef int swmm_transect_add_station(SWMM_Engine e, int idx, double station, double elevation)
    cdef int swmm_transect_count(SWMM_Engine e)
    # Streets
    cdef int swmm_street_add(SWMM_Engine e, const char* id)
    cdef int swmm_street_set_params(SWMM_Engine e, int idx,
                                     double t_crown, double h_curb, double sx, double n_road,
                                     double gutter_depres, double gutter_width, int sides,
                                     double back_width, double back_slope, double back_n)
    cdef int swmm_street_get_params(SWMM_Engine e, int idx,
                                     double* t_crown, double* h_curb, double* sx, double* n_road,
                                     double* gutter_depres, double* gutter_width, int* sides,
                                     double* back_width, double* back_slope, double* back_n)
    cdef int swmm_street_count(SWMM_Engine e)
    # Inlets
    cdef int swmm_inlet_add(SWMM_Engine e, const char* id, const char* type)
    cdef int swmm_inlet_set_params(SWMM_Engine e, int idx, double length, double width,
                                    const char* grate_type, double open_area, double splash_veloc)
    cdef int swmm_inlet_get_params(SWMM_Engine e, int idx, double* length, double* width,
                                    char* grate_type, int grate_buflen, double* open_area, double* splash_veloc)
    cdef int swmm_inlet_get_type(SWMM_Engine e, int idx, char* buf, int buflen)
    cdef int swmm_inlet_count(SWMM_Engine e)
    # LID controls
    cdef int swmm_lid_add(SWMM_Engine e, const char* id, int type)
    cdef int swmm_lid_set_surface(SWMM_Engine e, int idx, double storage, double roughness, double slope)
    cdef int swmm_lid_set_soil(SWMM_Engine e, int idx, double thick, double porosity, double fc, double wp, double ksat, double kslope)
    cdef int swmm_lid_set_storage(SWMM_Engine e, int idx, double thick, double void_frac, double ksat)
    cdef int swmm_lid_set_drain(SWMM_Engine e, int idx, double coeff, double expon, double offset)
    cdef int swmm_lid_set_pavement(SWMM_Engine e, int idx, double thick, double void_ratio, double frac_imperv, double ksat, double clog_factor, double regen_days)
    cdef int swmm_lid_set_drainmat(SWMM_Engine e, int idx, double thick, double void_frac, double roughness)
    cdef int swmm_lid_get_type(SWMM_Engine e, int idx, int* type)
    cdef int swmm_lid_get_surface(SWMM_Engine e, int idx, double* storage, double* roughness, double* slope)
    cdef int swmm_lid_get_soil(SWMM_Engine e, int idx, double* thick, double* porosity, double* fc, double* wp, double* ksat, double* kslope)
    cdef int swmm_lid_get_storage(SWMM_Engine e, int idx, double* thick, double* void_frac, double* ksat)
    cdef int swmm_lid_get_drain(SWMM_Engine e, int idx, double* coeff, double* expon, double* offset)
    cdef int swmm_lid_get_pavement(SWMM_Engine e, int idx, double* thick, double* void_ratio, double* frac_imperv, double* ksat, double* clog_factor, double* regen_days)
    cdef int swmm_lid_get_drainmat(SWMM_Engine e, int idx, double* thick, double* void_frac, double* roughness)
    cdef int swmm_lid_count(SWMM_Engine e)
    # LID usage
    cdef int swmm_lid_usage_add(SWMM_Engine e, int subcatch_idx, int lid_idx, int number, double area, double width, double init_sat, double from_imperv)
    cdef int swmm_lid_usage_count(SWMM_Engine e)
    cdef int swmm_lid_usage_get(SWMM_Engine e, int usage_idx,
                                int* subcatch_idx, int* lid_idx, int* number,
                                double* area, double* width, double* init_sat,
                                double* from_imperv, int* to_perv, double* from_perv)
    cdef int swmm_lid_usage_remove(SWMM_Engine e, int usage_idx)
    # Identity lookups (read side)
    cdef int         swmm_transect_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_transect_id(SWMM_Engine e, int idx)
    cdef int         swmm_street_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_street_id(SWMM_Engine e, int idx)
    cdef int         swmm_inlet_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_inlet_id(SWMM_Engine e, int idx)
    cdef int         swmm_lid_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_lid_id(SWMM_Engine e, int idx)
    # Transect detail getters / mutation
    cdef int swmm_transect_get_roughness(SWMM_Engine e, int idx, double* n_left, double* n_right, double* n_channel)
    cdef int swmm_transect_set_bank_stations(SWMM_Engine e, int idx, double left, double right)
    cdef int swmm_transect_get_bank_stations(SWMM_Engine e, int idx, double* left, double* right)
    cdef int swmm_transect_set_encroachment_stations(SWMM_Engine e, int idx, double left, double right)
    cdef int swmm_transect_get_encroachment_stations(SWMM_Engine e, int idx, double* left, double* right)
    cdef int swmm_transect_set_modifiers(SWMM_Engine e, int idx, double n_factor, double x_factor, double y_factor)
    cdef int swmm_transect_get_modifiers(SWMM_Engine e, int idx, double* n_factor, double* x_factor, double* y_factor)
    cdef int swmm_transect_set_comments(SWMM_Engine e, int idx, const char* text)
    cdef int swmm_transect_get_comments(SWMM_Engine e, int idx, char* buf, int buflen)
    cdef int swmm_transect_get_station_count(SWMM_Engine e, int idx)
    cdef int swmm_transect_get_station(SWMM_Engine e, int idx, int station_idx, double* station, double* elevation)
    cdef int swmm_transect_clear_stations(SWMM_Engine e, int idx)
    cdef int swmm_transect_rename(SWMM_Engine e, int idx, const char* new_id)
    cdef int swmm_transect_remove(SWMM_Engine e, int idx)

cdef extern from "openswmm_quality.h":
    # Landuse
    cdef int         swmm_landuse_count(SWMM_Engine e)
    cdef int         swmm_landuse_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_landuse_id(SWMM_Engine e, int idx)
    cdef int swmm_landuse_add(SWMM_Engine e, const char* id)
    cdef int swmm_landuse_set_sweep_interval(SWMM_Engine e, int idx, double days)
    cdef int swmm_landuse_get_sweep_interval(SWMM_Engine e, int idx, double* days)
    cdef int swmm_landuse_set_sweep_removal(SWMM_Engine e, int idx, double frac)
    cdef int swmm_landuse_get_sweep_removal(SWMM_Engine e, int idx, double* frac)
    # Buildup
    cdef int swmm_buildup_set(SWMM_Engine e, int lu_idx, int pollut_idx,
                               int func_type, double c1, double c2, double c3, int normalizer)
    cdef int swmm_buildup_get(SWMM_Engine e, int lu_idx, int pollut_idx,
                               int* func_type, double* c1, double* c2, double* c3, int* normalizer)
    # Washoff
    cdef int swmm_washoff_set(SWMM_Engine e, int lu_idx, int pollut_idx,
                               int func_type, double coeff, double expon,
                               double sweep_effic, double bmp_effic)
    cdef int swmm_washoff_get(SWMM_Engine e, int lu_idx, int pollut_idx,
                               int* func_type, double* coeff, double* expon,
                               double* sweep_effic, double* bmp_effic)
    # Treatment
    cdef int swmm_treatment_set(SWMM_Engine e, int node_idx, int pollut_idx, const char* expression)
    cdef int swmm_treatment_get(SWMM_Engine e, int node_idx, int pollut_idx, char* buf, int buflen)
    cdef int swmm_treatment_clear(SWMM_Engine e, int node_idx, int pollut_idx)

cdef extern from "openswmm_statistics.h":
    # Node
    cdef int swmm_stat_node_max_depth(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_node_max_overflow(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_node_vol_flooded(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_node_time_flooded(SWMM_Engine e, int idx, double* val)
    # Link
    cdef int swmm_stat_link_max_flow(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_link_max_velocity(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_link_max_filling(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_link_vol_flow(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_link_surcharge_time(SWMM_Engine e, int idx, double* val)
    # Subcatchment
    cdef int swmm_stat_subcatch_precip(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_subcatch_runoff_vol(SWMM_Engine e, int idx, double* val)
    cdef int swmm_stat_subcatch_max_runoff(SWMM_Engine e, int idx, double* val)
    # Bulk
    cdef int swmm_stat_node_max_depth_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_link_max_flow_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_subcatch_runoff_vol_bulk(SWMM_Engine e, double* buf, int count) nogil
    # Phase 3 statistics bulk getters — flooding + max-runoff.
    cdef int swmm_stat_node_max_overflow_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_node_vol_flooded_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_node_time_flooded_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_subcatch_max_runoff_bulk(SWMM_Engine e, double* buf, int count) nogil
    # Phase 4e link-stat bulks — completes the per-link statistics surface.
    cdef int swmm_stat_link_max_velocity_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_link_max_filling_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_link_vol_flow_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_stat_link_surcharge_time_bulk(SWMM_Engine e, double* buf, int count) nogil
